tests/baselines/reference/privateNameNotAccessibleOutsideDefiningClass.errors.txt
privateNameNotAccessibleOutsideDefiningClass.ts(5,9): error TS18013: Property '#foo' is not accessible outside class 'A' because it has a private identifier.


==== privateNameNotAccessibleOutsideDefiningClass.ts (1 errors) ====
    class A {
        #foo: number = 3;
    }
    
    new A().#foo = 4;               // Error
            ~~~~
!!! error TS18013: Property '#foo' is not accessible outside class 'A' because it has a private identifier.
    